Fix column gap for contentCarousel and cleaning styles

--- a/quintagroup/slidertemplates/browser/resources/slidertemplates.css
+++ b/quintagroup/slidertemplates/browser/resources/slidertemplates.css
@@ -320,9 +320,6 @@ h2.resp-tab-title:last-child {
     -o-transition: all 1s ease !important;
     transition: all 1s ease !important;
     }
-dl.portlet.portletQgCarousel dd.portletItem {
-    padding: 1em 0;
-    }
 .qg-item .item-visual {
     display: block;
     margin: 0 0 1em 2em;
@@ -353,8 +350,9 @@ dl.portlet.portletQgCarousel dd.portletItem {
     }
 
 /*---------- Circle Carousel ----------*/
+
 .slider-wrapper-outer {
-    margin-bottom: 30px;
+    margin-bottom: 2em;
     overflow: hidden;
     position: relative;
     width: 100%;
@@ -369,7 +367,7 @@ dl.portlet.portletQgCarousel dd.portletItem {
     }
 .slider-wrapper .item {
     float: left;
-    margin: 0 0 30px;
+    margin: 0 0 2em;
     position: relative;
     }
 .bx-wrapper .block-visual {
@@ -414,7 +412,7 @@ dl.portlet.portletQgCarousel dd.portletItem {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     float: left;
-    margin-right: 30px;
+    margin-right: 2em;
     position: relative;
     }
 
